Se agrego autos

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_URL=http://localhost
 
 TOKEN_WHATSAPP=
 TELEFONO_ID=
+TOKEN_PRIMERACONEXIONWHAT=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
